updated server info

--- a/server_config.cfg
+++ b/server_config.cfg
@@ -3,8 +3,8 @@
 
 # Set basic server info
 # Character limits: server_name (63), welcome_message (254), password (31)
-server_name=asdf
-welcome_message=
+server_name=NL|BIECHTERS|NO RULES|ALL CHAOS
+welcome_message=NL|BIECHTERS|NO RULES|ALL CHAOS
 password=
 max_players=24
 
@@ -17,7 +17,7 @@ clear_users=1
 owner_disabled=0
 
 # Comma separated list of Steam IDs (steamID64) of users that will be auto-granted admin privileges
-#admin_steam_ids=12345678912345678
+admin_steam_ids=76561198016412879
 
 # Setup server for local area network play only
 # 0 = use Steam, 1 = without Steam
@@ -40,10 +40,10 @@ gamemode=derby
 bots=10
 
 # Number of teams in team game modes, 2-4
-num_teams=2
+num_teams=4
 
 # Amount of laps in race game modes, 1-60
-laps=3
+laps=5
 
 # Deathmatch time limit in minutes
 time_limit=20
@@ -68,7 +68,7 @@ special_vehicles_disabled=0
 car_reset_disabled=0
 
 # Set car reset delay to 0 (no delay) or 1-20 seconds
-car_reset_delay=0
+car_reset_delay=5
 
 # Disable speed limit for players that drive the wrong way
 wrong_way_limiter_disabled=0
@@ -94,30 +94,721 @@ log=
 #  Use the console command /eventloop to enable/disable rotation.
 
 ## Add first event to Loop
-#el_add=gravel1_main_loop
-#el_gamemode="racing"
-#el_laps=3
-#el_car_reset_disabled=0
-#el_wrong_way_limitel_disabled=0
-#el_car_class_restriction=a
-#el_car_restriction=
-#el_weather=
+el_add=sandpit3_long_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
 
-## Add second event to Loop
-#el_add=tarmac1_main_circuit
-#el_gamemode="team race"
-#el_num_teams=2
-#el_laps=3
-#el_car_reset_disabled=0
-#el_wrong_way_limitel_disabled=0
-#el_car_class_restriction=a
-#el_car_restriction=
-#el_weather=
 
-## Add third event to Loop
-#el_add=speedway2_demolition_arena
-#el_gamemode="derby"
-#el_car_reset_disabled=0
-#el_car_class_restriction=a
-#el_car_restriction=
-#el_weather=
+el_add=sandpit3_long_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit3_short_loop
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit3_short_loop_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac3_main_circuit
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac3_main_circuit_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac3_short_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac3_short_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed1_main_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed1_main_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac1_main_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac1_main_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac1_short_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac1_short_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed7_r1
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed7_r1_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed7_r3
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed7_r3_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed2_main_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed2_main_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=gravel1_main_loop
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=gravel1_main_loop_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac2_main_circuit
+el_num_teams=2
+el_laps=4
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=tarmac2_main_circuit_rev
+el_num_teams=2
+el_laps=4
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed5_free_route
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed5_inner_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed5_inner_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed5_outer_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed5_outer_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed3_long_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed3_long_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed3_short_loop
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed3_short_loop_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed4_main_circuit
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=mixed4_main_circuit_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_alt_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_alt_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_long_loop
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_long_loop_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_short_loop
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit1_short_loop_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit2_full_circuit
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit2_full_circuit_rev
+el_num_teams=2
+el_laps=5
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit2_2
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
+
+
+el_add=sandpit2_2_rev
+el_num_teams=2
+el_laps=6
+el_time_limit=20
+el_elimination_interval=0
+el_car_reset_disabled=0
+el_car_reset_delay=20
+el_wrong_way_limiter_disabled=1
+el_special_vehicles_disabled=0
+el_car_class_restriction=a
+el_car_restriction=
+el_vehicle_damage=normal
+el_weather=
+el_gamemode=racing
